--- a/oroi/ui/templates/search.html
+++ b/oroi/ui/templates/search.html
@@ -20,7 +20,7 @@
 {% verbatim %}
 <script type="text/x-template" id="search">
 <div>
-    <section class="jumbotron text-center">
+    <section class="jumbotron text-center bg-light">
       <div class="container bg-header-icon">
         <h1 class="display-3"><a href="/">declared.</a></h1>
         <p class="lead text-muted">declared. collects declarations of interests, gifts, employment and more from elected members of bodies around the UK</p>
