--- a/oroi/ui/static/css/style.css
+++ b/oroi/ui/static/css/style.css
@@ -8,7 +8,7 @@ h1, a {
 }
 
 h1, h2, h3 {
-    font-weight: bold;
+    font-weight: bold !important;
 }
 
 a:hover {
@@ -19,8 +19,8 @@ a:hover {
     border: 1px solid #C5CCD4;
 }
 
-.jumbotron, footer {
-    background-color: #F1F6FC;
+.jumbotron, footer, .bg-light {
+    background-color: #F1F6FC !important;
 }
 
 .btn-primary, .badge-secondary {
