ui: search: Remove background from filters container
Updated for new visual style

--- a/oroi/ui/templates/search.html
+++ b/oroi/ui/templates/search.html
@@ -108,7 +108,7 @@
           <!-- facets / aggregates -->
           <div class="col-2 mt-2">
           <h3>Filters</h3>
-            <div class="d-flex flex-column bg-light rounded">
+            <div class="d-flex flex-column rounded">
 
               <h5>Bodies</h5>
               <ul class="list-group">
