templates: data: Citation for UK Parliament and House of Commons data
Add a link to TheyWorkForYou

--- a/oroi/ui/templates/data.html
+++ b/oroi/ui/templates/data.html
@@ -23,6 +23,8 @@
     {% endfor %}
   </ul>
 
+  <p>UK Parliament and House of Commons data via <a href="https://www.theyworkforyou.com/">TheyWorkForYou</a>
+
   <h2>Download the entire dataset</h2>
   <p><a class="btn btn-secondary btn-sm" href="{% url 'ui:csv-download' %}">CSV Download &raquo;</a></p>
   <p><a class="btn btn-secondary btn-sm" href="{% url 'api:declaration-list' %}">JSON API &raquo;</a></p>
